# desdeo-tutorials

./: pyproject.toml
DEMO_tutorial_01122021/: Tutorial.ipynb
DEMO_tutorial_01122021/.ipynb_checkpoints/: Tutorial-checkpoint.ipynb
